[package]
name = "light-poseidon"
version = "0.2.0"
authors = ["Mike Rostecki <vadorovsky@protonmail.com>"]
description = "Poseidon hash implementation in Rust"
repository = "https://github.com/Lightprotocol/light-poseidon"
readme = "../README.md"
keywords = ["cryptography", "hash", "poseidon", "zero-knowledge", "zkSNARK"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
core2 = { version = "0.4", default-features = false }
num-bigint = { version = "0.4.4", default-features = false }
thiserror_core2 = { version = "2.0.1", default-features = false }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
hex = "0.4.3"

[[bench]]
name = "bn254_x5"
harness = false
